<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="TextMessage">Here are my widgets:</string>

    <string name="Row2Botton">Button</string>
    <string name="Lab2CheckBox">Check this out!</string>
    <string name="Lab2Switch">Switch on \/ off</string>
    <string name="Lab2EditText">Type your answer in here</string>

    <string name="Lab3EmailText">Enter your email address:</string>
    <string name="Lab3EmailEdit">Type email here</string>
    <string name="Lab3PwdText">Type your password:</string>
    <string name="Lab3LoginButton">LOGIN</string>
    <string name="Lab3ProfileText">Your profile</string>
    <string name="Lab3NameText">Your name:</string>
    <string name="Lab3NameEdit">Enter your name</string>
    <string name="Lab3EmailText1">Your email:</string>
    <string name="Lab3EmailEdit1">Enter your email</string>
    <string name="Lab3PicText">Your picture:</string>
    <string name="Lab3PicButton">Click the button above to take a picture</string>

    <string name="Lab4Chat">Go to chat</string>
    <string name="Lab4Send">SEND</string>
    <string name="Lab4Recv">RECEIVE</string>
    <string name="Lab4ChatHint">Type here</string>

    <string name="Lab6ToolBarButton">Test tool bar</string>
    <string name="Lab6Item1">3 star</string>
    <string name="Lab6Item2">4 star</string>
    <string name="Lab6Item3">5 star</string>
    <string name="Lab6Item4">toast</string>
    <string name="Lab6DialogText">What is your new message?</string>
    <string name="Lab6DialogEdit">Type here</string>

    <string name="lab7Weather">WeatherForecast</string>

    <string name="Lab8Delete">delete this message</string>
</resources>
