<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab3ProfileText"
        android:textSize="30dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab3NameText"
        android:textSize="30dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Lab3NameEdit"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab3EmailText1"
        android:textSize="30dp"/>
    <EditText
        android:id="@+id/lab3EmailEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Lab3EmailEdit1"
        android:inputType="textEmailAddress"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab3PicText"
        android:textSize="30dp"/>
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab3PicButton"
        android:textSize="30dp"/>
    <Button
        android:id="@+id/lab4Chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lab4Chat"/>


</LinearLayout>