<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/item1"
        android:title="@string/Lab6Item1"
        android:icon="@drawable/3star"
        android:orderInCategory="100"
        app:showAsAction="always"/>


    <item android:id="@+id/item2"
        android:title="@string/Lab6Item2"
        android:icon="@drawable/4star"
        android:orderInCategory="200"
        app:showAsAction="always"/>

    <item android:id="@+id/item3"
        android:title="@string/Lab6Item3"
        android:icon="@drawable/5star"
        android:orderInCategory="300"
        app:showAsAction="always"/>


    <item android:id="@+id/item4"
        app:showAsAction="never"
        android:title="@string/Lab6Item4"/>
</menu>