<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab3EmailText"
        android:textSize="30dp"/>

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Lab3EmailEdit"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab3PwdText"
        android:textSize="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
    android:id="@+id/lab3LoginButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Lab3LoginButton"/>

    <Button
        android:id="@+id/lab6ToolBarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Lab6ToolBarButton"/>
</LinearLayout>