<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ChatRoomActivity">

    <ListView
        android:id="@+id/lab4ChatList"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true"
        >

    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/lab4Send"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lab4Send"/>
        <Button
            android:id="@+id/lab4Receive"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lab4Recv"/>
        <EditText
            android:id="@+id/lab4Edit"
            android:layout_toRightOf="@+id/lab4Send"
            android:layout_toLeftOf="@+id/lab4Receive"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Lab4ChatHint"/>
    </RelativeLayout>
</LinearLayout>